hphp/test/quick/fpush_fatal.php.expectf
HipHop Fatal error: Undefined function: asdasdasd in %s on line 6
